<resources>
    <string name="app_name">Feedback Tower</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="app_logo_desc">App Logo Image</string>
    <string name="otp">OTP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="birth_date">Birth date</string>
    <string name="continue_">continue</string>
    <string name="select_state">Select State</string>
    <string name="select_city">Select City</string>
    <string name="enter_pin">Enter Pincode</string>
    <string name="enter_address">Enter Address</string>
    <string name="business_name">Business name</string>
    <string name="est_reg">Establishment Registration No. (Optional)</string>
    <string name="business_cat">Business Category</string>
    <string name="office_address">Office Address</string>
    <string name="office_phone">Office Contact</string>
    <string name="office_website">Business Website(Optional)</string>
    <string name="write_review">Write review</string>
    <string name="write_something">Write Something…</string>
    <string name="send_review">SEND REVIEW</string>
    <string name="send_suggestion">Suggestion</string>
    <string name="send">send</string>
    <string name="payment">Payment</string>
    <string name="proceed_to_pay">PROCEED TO PAY</string>
    <string name="select_interests">Select Interests</string>
    <string name="select_interest">Select Your Interests</string>
    <string name="save_selection">SAVE SELECTION</string>
    <string name="cd_cat_image">CategoryImage</string>
    <string name="title_activity_business_main">Feedback Tower</string>
    <string name="title_search">Search</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_suggestions">Suggestions</string>
    <string name="title_my_account">My Account</string>
    <string name="home_screen_fragment_title">Feedback Tower</string>
    <string name="no_suggestions_yet">No suggestions yet</string>
    <string name="no_reviews_yet">No Reviews Yet</string>
    <string name="reply">REPLY</string>
    <string name="no_feed_yet">No Feed Yet</string>
    <string name="like_image_button">Like image Button</string>
    <string name="cd_business_logo">Business logo</string>
    <string name="edit_profile">EDIT PROFILE</string>

    <string name="likes">%d likes</string>
    <string name="fullName">%1s %2s</string>
    <string name="write_your_reply">Write your reply...</string>
    <string name="no_search_results">No Search Results</string>
    <string name="dot_bullet">•</string>
    <string name="title_timeline">Timeline</string>
    <string name="timeline">Timeline</string>
    <string name="title_details">Details</string>
    <string name="rate_and_review">Rate and Review</string>
    <string name="register">REGISTER</string>
    <string name="default_err_message">Some error occurred</string>
    <string name="send_otp">SEND OTP</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="please_wait">Please wait...</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_date">SELECT DATE</string>
    <string name="continue_as_customer">CONTINUE AS CUSTOMER</string>
    <string name="register_businsess">Register Business</string>
    <string name="post">POST</string>
    <string name="select_plan">Select Your Plan</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="pick_image_intent_chooser_title">Pick Image</string>
    <string name="crop_image_activity_title">Crop</string>
    <string name="crop_image_activity_no_permissions">No permissions</string>
    <string name="file_provider_authority">sdsd</string>
    <string name="send_request">SEND REQUEST</string>

    <!--trimmer-->
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="short_seconds">sec</string>
    <string name="megabyte">MB</string>
    <string name="kilobyte">KB</string>


    <string name="all_images">All Images</string>
    <string name="done">Done</string>

    <string name="permission_filepicker_rationale">Storage permission is needed to access files.</string>
    <string name="no_files_found">No Files Found</string>
    <string name="attachments_title_text" formatted="false">(%d/%d)</string>
    <string name="attachments_num" formatted="false">%d</string>
    <string name="select_photo_text">Select a media</string>
    <string name="select_doc_text">Select a document</string>
    <string name="no_camera_exists">No Application exists for camera!</string>
    <string name="pdf_title">PDF</string>
    <string name="ppt_title">PPT</string>
    <string name="word_title">DOC</string>
    <string name="excel_title">XLS</string>
    <string name="txt_title">TXT</string>
    <string name="videos">Videos</string>
    <string name="images">Images</string>
    <string name="all_photos">All Photos</string>
    <string name="all_videos">All Videos</string>
    <string name="all_files">All Files</string>
    <string name="reset">Reset</string>

    //keys
    <string name="map_key">AIzaSyALzMkiSN4IKg94QuCXGRNV4ViZl6u3pdc</string>
    <string name="title_activity_map_screen">Find Nearby</string>
    <string name="available">Available</string>

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">User</string>


    <string-array name="pref_time_interval">
        <item>15 mins</item>
        <item>30 mins</item>
        <item>1 hr</item>
        <item>1.5 hrs</item>
        <item>2 hrs</item>
        <item>3 hrs</item>
    </string-array>
    <string-array name="pref_time_interval_values">
        <item>0.25</item>
        <item>0.5</item>
        <item>1</item>
        <item>1.5</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="pref_half_day_type">
        <item>Odd Saturdays</item>
        <item>Even Saturdays</item>
    </string-array>
    <string-array name="pref_half_day_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="pref_app_theme_entries">
        <item>Light Theme</item>
        <item>Dark Theme</item>
    </string-array>
    <string-array name="pref_app_theme_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="settings_title">Settings</string>
    <string name="pref_description_enable_reminders">Get reminders in notification and write entries in line</string>
    <string name="pref_title_enable_reminders">Enable reminders</string>
    <string name="pref_title_interval_list">Select reminder interval</string>
    <string name="pref_title_half_day_type">Half-Day type</string>
    <string name="pref_title_app_theme">Select theme</string>
    <string name="pref_description_enable_trackme">Your live location will be shown to your customers</string>
    <string name="pref_title_enable_trackme">Track Me</string>
    <string name="pref_description_enable_notifications">Receive reviews, suggestion related notifications</string>
    <string name="pref_title_enable_notifications">Enable Notification</string>
    <string name="upload">UPLOAD</string>
    <string name="no_transactions">No transactions yet</string>
    <string name="location_tracking_hint">It allows customers to see your last location</string>
    <string name="show_business_profile">SHOW BUSINESS PROFILE</string>
    <string name="open_in_browser">OPEN IN BROWSER</string>
    <string name="some_error_try_again">Some error occurred, Please try again</string>
    <string name="request_sent">Request sent</string>
    <string name="transfer_cancelled">Transfer cancelled</string>
    <string name="transfer_success">Transfer success</string>
    <string name="preparing_video_for_upload">Preparing video for upload...</string>
    <string name="uploading_video">Uploading video, please wait</string>
    <string name="video_uploaded">Video posted</string>
    <string name="please_wait_dot_dot">Please wait...</string>
    <string name="session_expired_message">Session expired, please login again</string>

</resources>
