<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/stateLayout"
            android:hint="@string/select_state">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/stateInput"
                android:drawableEnd="@drawable/ic_arrow_down_24"
                android:padding="@dimen/drawable_padding"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/cityLayout"
            android:hint="@string/select_city">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/countryInput"
                android:drawableEnd="@drawable/ic_arrow_down_24"
                android:padding="@dimen/drawable_padding"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/pincodeLayout"
            android:hint="@string/enter_pin">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/piccodeInput"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/addressLayout"
            android:hint="@string/enter_address">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/addressInput"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            style="@style/ButtonFilledStyle"
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_"/>
</LinearLayout>