<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".fragments.PersonalDetailsFragment">
    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/fullNameLayout"
            android:hint="@string/full_name">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/fullNameInput"
                android:drawableEnd="@drawable/ic_person_outline_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/emailLayout"
            android:hint="@string/email">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/emailInput"
                android:drawableEnd="@drawable/ic_email_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/birthdateLayout"
            android:hint="@string/birth_date">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/birthdateInput"
                android:drawableEnd="@drawable/ic_perm_contact_calendar_black_24dp"
                android:drawablePadding="@dimen/drawable_padding"
                android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            style="@style/ButtonFilledStyle"
            android:id="@+id/continueButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_"/>
</LinearLayout>