<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/businessFieldsLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:id="@+id/officeAddressLayout"
                    android:hint="@string/office_address">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:id="@+id/officeAddressInput"
                        android:drawableEnd="@drawable/ic_perm_contact_calendar_black_24dp"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:id="@+id/officeContactLayout"
                    android:hint="@string/office_phone">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:id="@+id/officeContactInput"
                        android:drawableEnd="@drawable/ic_perm_contact_calendar_black_24dp"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:id="@+id/officeWebsiteLayout"
                    android:hint="@string/office_website">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:id="@+id/officeWebsiteInput"
                        android:drawableEnd="@drawable/ic_perm_contact_calendar_black_24dp"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    style="@style/ButtonFilledStyle.Big"
                    android:id="@+id/continueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/continue_"/>
        </LinearLayout>
    </ScrollView>
</layout>
