<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="business" type="com.feedbacktower.data.models.Business"/>
        <variable name="onContinueClick" type="android.view.View.OnClickListener"/>
    </data>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/businessFieldsLayout"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:id="@+id/businessNameLayout"
                    android:hint="@string/business_name">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:id="@+id/businessNameInput"
                        android:drawableEnd="@drawable/ic_person_outline_black_24dp"
                        android:text="@{business.name}"
                        android:drawablePadding="@dimen/drawable_padding"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:id="@+id/estRegNoLayout"
                    android:hint="@string/est_reg">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:id="@+id/estRegNoInput"
                        android:drawableEnd="@drawable/ic_email_black_24dp"
                        android:text="@{business.regNo}"
                        android:drawablePadding="@dimen/drawable_padding"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                    style="@style/TextInputLayoutStyle"
                    android:id="@+id/businessCatLayout"
                    android:hint="@string/business_cat">
                <com.google.android.material.textfield.TextInputEditText
                        style="@style/EditTextStyle"
                        android:id="@+id/businessCatInput"
                        android:drawableEnd="@drawable/ic_arrow_down_24"
                        android:drawablePadding="@dimen/drawable_padding"
                        android:inputType="none"/>
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                    style="@style/ButtonFilledStyle.Big"
                    android:id="@+id/continueButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/continue_"
                    android:onClick="@{onContinueClick}"/>
        </LinearLayout>
    </ScrollView>
</layout>
