<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottomsheet"
        android:paddingTop="24dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingBottom="24dp">
    <TextView
            style="@style/DialogTitleStyle"
            android:id="@+id/dialogTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/send_suggestion"/>
    <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_close_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            android:background="?attr/selectableItemBackgroundBorderless"/>

    <com.google.android.material.textfield.TextInputLayout
            style="@style/TextInputLayoutStyle"
            android:id="@+id/reviewSummaryLayout"
            android:hint="@string/write_something"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialogTitle">
        <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextStyle"
                android:id="@+id/suggestionMessageInput"
                android:lines="4"
                android:padding="@dimen/drawable_padding"
                android:gravity="start"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:id="@+id/sendSuggestionButton"
            style="@style/ButtonFilledStyle.Big"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/dimen_16dp"
            app:layout_constraintTop_toBottomOf="@+id/reviewSummaryLayout"
            android:text="@string/send"/>
</androidx.constraintlayout.widget.ConstraintLayout>