<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="onSignUpClicked" type="android.view.View.OnClickListener"/>
        <variable name="pageTitle" type="String"/>
    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="100dp"
                android:clipToPadding="false"
                tools:context=".ui.register.RegisterPhoneScreen">
            <ImageView
                    android:id="@+id/appLogoImage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_launcher_100"
                    android:layout_marginTop="80dp"
                    android:contentDescription="@string/app_logo_desc"/>
            <TextView
                    style="@style/MediumBoldText"
                    android:id="@+id/appName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="   @+id/appLogoImage"
                    android:layout_marginTop="8dp"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:text="@string/app_name"/>
            <TextView
                    android:id="@+id/login"
                    style="@style/LargeTitleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="   @+id/appName"
                    android:layout_marginTop="24dp"
                    android:textColor="@color/white"
                    android:text="@{pageTitle}"/>
            <LinearLayout
                    android:id="@+id/lay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/login"
                    app:layout_constraintBottom_toTopOf="@id/registerButton"
                    android:layout_marginBottom="24dp"
                    android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayoutStyle"
                        android:id="@+id/textInputPhone"
                        android:hint="@string/mobile_number"
                        android:layout_marginTop="30dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/appName">
                    <com.google.android.material.textfield.TextInputEditText
                            style="@style/EditTextStyle.Auth"
                            android:id="@+id/mobileInput"
                            android:maxLength="@integer/phone_length"
                            android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayoutStyle"
                        android:id="@+id/textInputOtp"
                        android:hint="@string/otp"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/appName">
                    <com.google.android.material.textfield.TextInputEditText
                            style="@style/EditTextStyle.Auth"
                            android:id="@+id/OTPInput"
                            android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                        style="@style/TextInputLayoutStyle"
                        android:id="@+id/textInputPassword"
                        android:hint="@string/password"
                        android:visibility="gone"
                        app:passwordToggleDrawable="@drawable/ic_password_selector"
                        app:passwordToggleTint="@color/grey42"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textInputPhone">
                    <com.google.android.material.textfield.TextInputEditText
                            style="@style/EditTextStyle.Auth"
                            android:id="@+id/passwordInput"
                            android:inputType="textPassword"
                            android:imeOptions="actionDone"
                    />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>


            <Button
                    style="@style/ButtonFilledStyle.Big"
                    android:id="@+id/registerButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/send_otp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lay"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:onClick="@{onSignUpClicked}"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>